force-app/main/default/objects/Campaign__c/Campaign__c.object-meta.xml
<CustomObject>
    <description>[a0q][Campaign__c] Campanha de Trade Marketing</description>
    <label>Campanha</label>
    <nameField>
        <label>Nome da Campanha</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campanhas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>