force-app/main/default/objects/Campaign__c/fields/CodeTxt__c.field-meta.xml
<CustomField>
    <fullName>CodeTxt__c</fullName>
    <externalId>true</externalId>
    <label>Código</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>