force-app/main/default/objects/Campaign__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixa</fullName>
            </value>
            <value>
                <fullName>Specific</fullName>
                <label>Pontual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>