force-app/main/default/objects/Campaign__c/validationRules/CampaignDates.validationRule-meta.xml
<ValidationRule>
    <fullName>CampaignDates</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
    <errorMessage>A data de início não pode ser posterior à data de término</errorMessage>
</ValidationRule>