force-app/main/default/objects/Campaign__c/listViews/Campanhas_Ativas.listView-meta.xml
<ListView>
    <fullName>Campanhas_Ativas</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Campanhas Ativas</label>
</ListView>